[workspace]
members = [
    "avm",
    "cli",
    "client",
    "idl",
    "lang",
    "lang/attribute/*",
    "lang/derive/*",
    "lang/syn", "program",
    "spl",
]
exclude = ["tests/cfo/deps/openbook-dex", "tests/swap/deps/openbook-dex"]
resolver = "2"

[workspace.dependencies]
solana-account = "3.0.0"
solana-account-decoder = "3.0.0"
solana-account-info = "3.0.0"
solana-cli-config = "3.0.0"
solana-clock = "3.0.0"
solana-commitment-config = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-cpi = "3.0.0"
solana-define-syscall = "3.0.0"
solana-faucet = "3.0.0"
solana-feature-gate-interface = "3.0.0"
solana-instruction = "3.0.0"
solana-instructions-sysvar = "3.0.0"
solana-invoke = "0.5.0"
solana-keypair = "3.0.0"
solana-loader-v3-interface = "6.0.0"
solana-message = "3.0.0"
solana-msg = "3.0.0"
solana-packet = "3.0.0"
solana-program = "3.0.0"
solana-program-entrypoint = "3.0.0"
solana-program-error = "3.0.0"
solana-program-memory = "3.0.0"
solana-program-option = "3.0.0"
solana-program-pack = "3.0.0"
solana-pubkey = "4.0.0"
solana-pubsub-client = "3.0.0"
solana-rpc-client = "3.0.0"
solana-rpc-client-api = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-signature = "3.0.0"
solana-signer = "3.0.0"
solana-stake-interface = "2.0.0"
solana-system-interface = "2.0.0"
# FIXME: solana-sysvar 3.1.x contains breaking changes to sysvar retrieval
solana-sysvar = "~3.0.0"
solana-sysvar-id = "3.0.0"
solana-transaction = "3.0.0"

[profile.release]
lto = true

[profile.release.package.anchor-cli]
codegen-units = 1
